<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>advent-of-code-2025</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.26.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>

                <executions>
                    <execution>
                        <id>generate-class</id>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <!-- solution class -->
                                <mkdir dir="src/main/java/com/adventofcode/day${dayNumber}"/>
                                <copy file="src/main/resources/templates/solution.java"
                                      tofile="src/main/java/com/adventofcode/day${dayNumber}/${className}.java">
                                    <filterset>
                                        <filter token="dayNumber" value="${dayNumber}"/>
                                        <filter token="className" value="${className}"/>
                                    </filterset>
                                </copy>

                                <!-- test class -->
                                <mkdir dir="src/test/java/com/adventofcode/day${dayNumber}"/>
                                <copy file="src/main/resources/templates/test.java"
                                      tofile="src/test/java/com/adventofcode/day${dayNumber}/${className}Test.java">
                                    <filterset>
                                        <filter token="dayNumber" value="${dayNumber}"/>
                                        <filter token="className" value="${className}"/>
                                    </filterset>
                                </copy>

                                <!-- input files -->
                                <mkdir dir="src/test/resources/day${dayNumber}"/>
                                <copy file="src/main/resources/templates/0.in"
                                      tofile="src/test/resources/day${dayNumber}/0.in">
                                </copy>
                                <copy file="src/main/resources/templates/1.in"
                                      tofile="src/test/resources/day${dayNumber}/1.in">
                                </copy>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>